--- a/backbone-tutorial.html
+++ b/backbone-tutorial.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Hello World in Backbone.js</title>
+  <style>
+    #todo-list input.edit {
+    display: none; /* Hides input box*/
+    }
+    #todo-list .editing label {
+    display: none; /* Hides label text when .editing*/
+    }
+    #todo-list .editing input.edit {
+    display: inline; /* Shows input text box when .editing*/
+    }
+  </style>
 </head>
 <body>
   <!-- ========= -->
@@ -28,8 +39,10 @@
 
   <script type="text/template" id="item-template">
       <div class="view">
-          <input class="toggle" type="checkbox">
+          <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
           <label><%- title %></label>
+          <input class="edit" value="<%- title %>">
+          <button class="destroy">remove</button>
       </div>
   </script>
 
@@ -44,6 +57,9 @@
         defaults: {
             title:'',
             completed: false
+        },
+        toggle: function() {
+            this.save({completed: !this.get('completed')});
         }
     });
 
@@ -59,8 +75,42 @@
         template: _.template($('#item-template').html()),
         render: function() {
             this.$el.html(this.template(this.model.toJSON()));
+            this.input = this.$('.edit');
             return this; //chainimiseks
-        }
+        },
+        initialize: function() {
+            this.model.on('change', this.render, this);
+            this.model.on('destroy', this.remove, this); //remove is Backbone-i convenience function for removing view from the DOM
+        },
+        events: {
+            'dblclick label' : 'edit',
+            'keypress .edit' : 'updateOnEnter',
+            'blur .edit' : 'close',
+            'click .toggle' : 'toggleCompleted',
+            'click .destroy' : 'destroy',
+        },
+        edit: function() {
+            this.$el.addClass('editing');
+            this.input.focus();
+        },
+        close: function() {
+            var value = this.input.val().trim();
+            if(value) {
+                this.model.save({title: value});
+            }
+            this.$el.removeClass('editing');
+        },
+        updateOnEnter: function(e) {
+            if(e.which == 13) {
+                this.close();
+            }
+        },
+        toggleCompleted: function() {
+            this.model.toggle();
+        },
+        destroy: function() {
+            this.model.destroy();
+        },
     });
 
     var AppView = Backbone.View.extend({
