--- a/backbone-tutorial.html
+++ b/backbone-tutorial.html
@@ -24,6 +24,11 @@
       <header id="header">
           <h1>Todos</h1>
           <input id="new-todo" placeholder="Mis on vaja teha?">
+          <div>
+              <a href="#/">show all</a>
+              <a href="#/pending">show pending</a>
+              <a href="#/completed">show completed</a>
+          </div>
       </header>
       <section id="main">
           <ul id="todo-list"></ul>
@@ -65,7 +70,15 @@
 
     app.TodoList = Backbone.Collection.extend({
         model:app.Todo,
-        localStorage: new Store("backbone-todo")
+        localStorage: new Store("backbone-todo"),
+        completed: function() {
+            return this.filter(function(todo) {
+                return todo.get('completed');
+            });
+        },
+        remaining: function() {
+            return this.without.apply( this, this.completed());
+        }
     });
 
     app.todoList = new app.TodoList();
@@ -113,7 +126,7 @@
         },
     });
 
-    var AppView = Backbone.View.extend({
+    app.AppView = Backbone.View.extend({
         el: '#todoapp',
         initialize: function() {
             this.input = this.$('#new-todo');
@@ -139,7 +152,18 @@
         },
         addAll: function() {
             this.$('#todo-list').html('');
-            app.todoList.each(this.addOne, this);
+
+            switch(window.filter){
+                case 'pending':
+                    _.each(app.todoList.remaining(), this.addOne);
+                    break;
+                case 'completed':
+                    _.each(app.todoList.completed(), this.addOne);
+                    break;
+                default:
+                    app.todoList.each(this.addOne, this);
+                    break;
+            }
         },
         newAttributes: function() {
             return {
@@ -149,7 +173,20 @@
         }
     });
 
-    var appView = new AppView();
+    app.Router = Backbone.Router.extend({
+        routes: {
+            '*filter' : 'setFilter'
+        },
+        setFilter: function(params) {
+            window.filter = params.trim() || '';
+            app.todoList.trigger('reset');
+        }
+    });
+
+    app.router = new app.Router();
+    Backbone.history.start();
+    app.appView = new app.AppView();
+
   </script>
 
 </body>
